<resources>
    <string name="app_name">PlanPilot</string>
    <string name="add_activity_button_text">Adicionar Atividade</string>
    <string name="delete_activity_button_text">Deletar Atividade</string>
    <string name="clear_activities_button_text">Limpar Todas as Atividades</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="icon_name">Icone</string>
    <string name="icon">Icon</string>
    <string name="enter_activity">Digite algo</string>
    <string name="boxDescription" />
    <string name="icon_view" />
    <string name="yourImageViewId" />
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register">Registrar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="activities">Atividades</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_login">Login</string>
    <string name="create_account">Criar conta</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="today">Hoje</string>
    <string name="nav_cal_mon_small">Cal. Mensal</string>
    <string name="nav_cal_week">Cal. Semanal</string>
    <string name="nav_cal_mon_large">Calendário Mensal</string>
    <string name="nav_stretch_break">Intervalo Ativo</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="return_to_today">return_to_today</string>
    <string name="month">Mês</string>
    <string name="year">Ano</string>
    <string name="day">Dia</string>
    <string name="activity_name">Nome da atividade</string>
    <string name="_00_00">00:00</string>
    <string name="categories">Categorias</string>
    <string name="alarm">Alarme</string>
    <string name="add_time">Horário</string>
    <string name="chose_alarm_sound">Escolha um som de alarme</string>
    <string name="close_button">Botão de fechar</string>
    <string name="backspace">backspace</string>
    <string name="padrao">Padrão</string>
    <string name="until">Até</string>
    <string name="date_format">%d/%d/%d</string>
    <string name="sunday">D</string>
    <string name="monday">S</string>
    <string name="tuesday">T</string>
    <string name="wednesday">Q</string>
    <string name="thursday">Q</string>
    <string name="saturday">S</string>
    <string name="friday">S</string>
    <string name="clearallactivitiesdesc" />
    <string name="addactivitydesc" />
    <string name="add_activity">add_activity</string>
    <string name="description">Descrição</string>
    <string name="start">Início</string>
    <string name="end">Fim</string>
    <string name="separator">•</string>
    <string name="dote">.</string>
    <string name="completed_cycles">Ciclos concluídos: %1$d</string>
    <string name="hours_worked">Horas de atividade: %1$s</string>
    <string name="intervals_completed">Intervalos ativos concluídos: %1$d</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_00_02_00">00:02:00</string>
    <string name="time_interval">Tempo intervalo:</string>
    <string name="activity_time">Tempo atividade:</string>
    <string name="_02_00_00">02:00:00</string>
    <string name="actived_stretch">Intervalo ativo</string>
    <string name="pause">Pause</string>
    <string name="worked_hours_00_00_00">Horas trabalhadas: 00:00:00</string>
    <string name="completed_cycles_0">Ciclos concluídos: 0</string>
    <string name="completed_actived_stretchs_0">Intervalos ativos concluídos: 0</string>
    <string name="start_stretch">Iniciar</string>
    <string name="activity_date">%1$s • %2$s</string>
    <string name="activity_name_card">Activity Name</string>
    <string name="date">Date</string>
    <string name="unrelized">unrelized</string>
    <string name="done">done</string>
    <string name="today_activities">Atividades Para Hoje</string>
    <string name="scroll_view_cards_description">Lista de cartões de atividades roláveis</string>
    <string name="day_number">%d</string>
    <string name="acompanhar_de_atividade">Acompanhar de Atividade</string>
    <string name="calend_rio_mensal">Calendário Mensal</string>
    <string name="intervo_ativo">Intervo Ativo</string>
    <string name="controle_de_atividade">Controle de Atividade</string>
    <string name="e_mail_do_usu_rio">E-mail do Usuário</string>
    <string name="sair">Sair</string>
    <string name="lembrar_senha">Lembrar senha</string>
    <string name="lembrar_email">Lembrar email</string>
    <string name="logo">Logo</string>
    <string name="plan_pilot">Plan Pilot</string>
    <string name="activities_list">activities_list</string>
    <string name="registrar">Registrar</string>
    <string name="cards_atualizadas">Cards atualizadas ;)</string>
</resources>