<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/selectedMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/selectedYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="20sp"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/selectedDay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/day"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/midnight_purple_3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/nameActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/activity_name"
            android:minHeight="48dp"
            android:backgroundTint="@color/midnight_purple_2"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:paddingEnd="30dp"
            android:inputType="text"
            android:maxLength="30"
            android:layout_toStartOf="@+id/cancelButton"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/backspaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/midnight_purple_2"
            android:drawableEnd="@drawable/ic_backspace"
            android:minWidth="20dp"
            android:background="@null"
            android:visibility="gone"
            android:layout_toStartOf="@+id/cancelButton" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/midnight_purple_2"
            android:background="@null"
            android:visibility="gone"
            android:paddingBottom="2dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textSize="40sp"
        android:minHeight="55dp"
        android:background="@null"
        android:minWidth="150dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/midnight_purple_3" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="18sp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="10dp" />

</LinearLayout>
