<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/activity_name"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:backgroundTint="@color/midnight_purple_2"
        android:textColorHint="@color/midnight_purple_4"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <Button
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_00_00"
        android:background="@null"
        android:textSize="48sp"
        android:textColor="@color/midnight_purple_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/alarmTone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/chose_alarm_sound"
            android:scaleType="center"
            android:src="@drawable/ic_alarm_tone"
            android:stateListAnimator="@null"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/alarmToneName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/padrao" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarmSwitch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/alarm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:stateListAnimator="@null"/>
    </LinearLayout>
</LinearLayout>
