<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentStretchBreak">

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/liWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/activity_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck,TextSizeCheck" />

            <EditText
                android:id="@+id/etWorkTime"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/_02_00_00"
                android:inputType="number"
                android:maxLength="8"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:gravity="center"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/etRest"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/time_interval"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/etRestTime"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/_00_02_00"
                android:inputType="number"
                android:maxLength="8"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:gravity="center"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_below="@id/inputContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="48sp"
        android:textColor="@color/text_default"
        android:text="@string/_00_00_00" />

    <Button
        android:id="@+id/btnWork"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/start_stretch"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/btnStretch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnWork"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/actived_stretch"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnStretch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/pause"
        android:stateListAnimator="@null" />

    <TextView
        android:id="@+id/tvCyclesCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPause"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/completed_cycles_0" />

    <TextView
        android:id="@+id/tvHoursWorked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCyclesCompleted"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/worked_hours_00_00_00" />

    <TextView
        android:id="@+id/tvIntervalsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHoursWorked"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/completed_actived_stretchs_0" />

</RelativeLayout>
