<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentActivityList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/selectedDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/selectedMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dote"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/selectedYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/activity_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</LinearLayout>
