<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewActivityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_name_card"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewActivityDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            tools:ignore="RtlHardcoded">

            <ImageButton
                android:id="@+id/buttonUncheck"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/unrelized"
                android:src="@drawable/ic_uncheck_card"
                android:stateListAnimator="@null"
                android:layout_marginEnd="3dp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/buttonCheck"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/done"
                android:src="@drawable/ic_check"
                android:stateListAnimator="@null"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
